--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,8 @@ before_install:
   - sudo update-java-alternatives -s java-8-oracle
   - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
   - java -version
-  - wget https://github.com/apache/cassandra/archive/cassandra-$CVER.tar.gz && tar -xvzf cassandra-$CVER.tar.gz
-  - pwd
-  - export CASSANDRA_HOME=cassandra-cassandra-$CVER
-  - sudo sh ./cassandra-cassandra-$CVER/bin/cassandra -R
+  - wget http://www.apache.org/dyn/closer.lua/cassandra/$CVER/apache-cassandra-$CVER-bin.tar.gz && tar -xvzf apache-cassandra-$CVER.tar.gz
+  - sudo sh ./apache-cassandra-$CVER/bin/cassandra -R
   - sleep 20
 install:
   - "MIX_ENV=test mix do local.hex --force, local.rebar --force, deps.get"
