--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,13 @@ before_install:
   - sudo update-java-alternatives -s java-8-oracle
   - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
   - java -version
-  - wget http://www.apache.org/dyn/closer.lua/cassandra/$CVER/apache-cassandra-$CVER-bin.tar.gz && tar -xvzf apache-cassandra-$CVER.tar.gz
-  - sudo sh ./apache-cassandra-$CVER/bin/cassandra -R
+  - wget https://www.dropbox.com/s/f86zyi3qmhqvfbp/apache-cassandra-3.9.tar.gz?dl=1 -O apache-cassandra-3.9.tar.gz && tar -xvzf apache-cassandra-3.9.tar.gz
+  - sudo sh ./apache-cassandra-3.9/bin/cassandra -R
   - sleep 20
 install:
   - "MIX_ENV=test mix do local.hex --force, local.rebar --force, deps.get"
 script:
   - "MIX_ENV=test mix do espec, coveralls.travis"
-env:
-  - CVER=3.9
 notifications:
   recipients:
     - pavel@tatarsky.ru
